assets/css/style.css
* {
  font-family: "Kanit", sans-serif;
}
.wrapper-header {
  background-color: #e5b7e9;
  margin: 0;
  padding: 0;
  border: 0;
  max-height: 100%;
}
.header {
  margin: 0;
}
.heading-navbar {
  min-height: 100px;
  min-width: 100px;
}
.logo {
  background-image: url(../../assets/images/Cats-Union.png);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}
.page-title {
  text-align: center;
  padding: 20px;
}
.navbar-light {
  background-color: #e5b7e9;
}
.navbar {
  min-height: 100px;
  padding: 0px;
  border: 0px;
  margin: 0px;
  width: 100%;
}
.nav-box {
  position: relative;
  bottom: 0;
  right: 0;
  padding: 10px 25px;
  border: 1px;
  margin: 0px;
  font-size: 20px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
}
.nav li {
  font-size: 14px;
  padding: 0;
}
.nav-attach {
  font-size: 0;
}
.nav-box-first {
  background-color: #e5b7e9;
  color: black;
}
.nav-box-first:hover {
  background-color: #c97ad0;
  color: black;
}
.nav-box-second {
  background-color: #e5b7e9;
  color: black;
}
.nav-box-second:hover {
  background-color: #c97ad0;
  color: black;
}
.nav-box-third {
  background-color: #e5b7e9;
  color: black;
}
.nav-box-third:hover {
  background-color: #c97ad0;
  color: black;
}
.nav-box-fourth {
  background-color: #e5b7e9;
  color: black;
}
.nav-box-fourth:hover {
  background-color: #c97ad0;
  color: black;
}
.nav-box-active {
  background-color: #c97ad0;
  color: black;
}
.long-image {
  max-height: 603px;
  padding-bottom: 10px;
}
.main-page-background {
  background-image: url(../../assets/images/Cat-poke.png);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 603px;
  padding-bottom: 10px;
}
.adopting-panel {
  min-height: 403px;
  padding-bottom: 10px;
  display: inline-block;
}
.title {
  font-size: 50px;
  text-align: Center;
  padding: 20px;
}
.subtitle {
  font-size: 30px;
  text-align: center;
}

.slogan {
  color: white;
  font-size: 30px;
  position: relative;
  width: 300px;
  height: 200px;
  padding-top: 40px;
  padding-left: 10px;
  bottom: 450px;
  left: 630px;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}
.support-slogan {
  color: black;
  font-size: 30px;
  position: relative;
  width: 300px;
  height: 200px;
  padding-top: 40px;
  padding-left: 10px;
  bottom: 450px;
  left: 430px;
}
.advice-slogan {
  color: white;
  font-size: 30px;
  position: relative;
  width: 300px;
  height: 200px;
  padding-top: 40px;
  padding-left: 10px;
  bottom: 600px;
  left: 790px;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}


.cat-details {
  text-align: Center;
}
.cat-box {
  position: relative;
  padding: 10px 25px;
  border: 0px;
  margin: 0px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
}
.salem-cat {
  background-image: url(../../assets/images/Salem.png);
}
.savannah-cat {
  background-image: url(../../assets/images/Savannah.jpg);
}
.charlie-cat {
  background-image: url(../../assets/images/charlie.png);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}
.donate-panel {
  min-height: 603px;
  padding-bottom: 10px;
  background-color: #eeedac;
}
.donate-details {
  text-align: Center;
}
.circle-image {
  position: relative;
  top: 20px;
  text-align: center;
  text-decoration: none;
}
.circle-image img {
  border-width: 1px;
  border-radius: 50%;
}

.left-circle {
  position: relative;
  left: 50px;
}
.middle-circle {
  top: 60px;
}
.right-circle {
  position: relative;
  right: 50px;
}
.upper-image {
  background: rgb(0, 0, 0);
  opacity: 0.9;
  background-image: url(../../assets/images/cage-cat.png);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 600px;
  padding-bottom: 20px;
}
.upper-statement h2 {
  color: black;
  font-size: 30px;
  position: relative;
  width: 300px;
  height: 200px;
  padding-top: 40px;
  padding-left: 10px;
  bottom: 600px;
  left: 840px;
  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
}
.middle-image {
  background: rgb(0, 0, 0);
  opacity: 0.9;
  background-image: url(../../assets/images/Man-with-kitten.png);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 600px;
  padding-bottom: 20px;
}
.middle-statement h2 {
  color: black;
  font-size: 30px;
  position: relative;
  width: 300px;
  height: 200px;
  padding-top: 40px;
  padding-left: 10px;
  bottom: 610px;
  left: 70px;
  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
}
.lower-image {
  background: rgb(0, 0, 0);
  opacity: 0.9;
  background-image: url(../../assets/images/vet-kitten.png);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 600px;
  padding-bottom: 20px;
}
.lower-statement h2 {
  color: black;
  font-size: 30px;
  position: relative;
  width: 300px;
  height: 80px;
  padding-top: 40px;
  padding-left: 10px;
  bottom: 250px;
  left: 870px;
  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
}

.support-page-donate-panel {
  background-image: url(../../assets/images/kitten-group.png);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 603px;
  padding-bottom: 10px;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 0.9;
}

/* used following website to figure out how to put borders around letters https://stackoverflow.com/questions/2570972/css-font-border */

.donate-title {
  font-size: 70px;
  font-weight: bold;
  text-align: Center;
  padding: 20px;
  position: relative;
  color: white;
  top: 10px;
  z-index: 1;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}
/* ... */

